--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,7 +1,7 @@
 // This is the variables Stylesheet
 
 // This is the default border properties
-$borderSettings: 1px solid transparent;
+$borderSettings: 1px solid black;
 
 // Navbar hover Color
 $navHover: blue;
